# ifg-py

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  ifg.py  main.ipynb  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  units_converter.py
.github/workflows/: codeql-analysis.yml  deploy.yml  examples.yml  python_package.yml  release.yml  test.yml
docs/source/: class_desc.rst  conf.py  conversion.rst  functional_desc.rst  index.rst
examples/plots/: cp_by_cv.py  cs.py  cv_cp.py  mu.py  p.py  theta.py
ifg/: __init__.py  calculator.py  examples.py  ifg.py  units_converter.py  utils.py
ifg_py/: __init__.py  calculator.py  examples.py  ifg.py  units_converter.py  utils.py
tests/: conftest.py  test_asymptotics.py  test_converter.py
tests/unit/: test_around_threshold.py  test_asymptotics.py  test_attributes.py  test_calculator_signature.py  test_converter.py  test_theta.py
