[tool.poetry]
name = "ifg"
version = "2.1.1"
description = "Calculator of Ideal Fermi gas properties"
license = "MIT"
authors = [
    "Aleksei Kozharin <1alekseik1@gmail.com>",
    "Pavel Levashov <pasha@jiht.ru>"
]
maintainers = ["Aleksei Kozharin <1alekseik1@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alekseik1/ifg-py"
documentation = "https://ifg-py.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License"
]

[tool.isort]
profile = "black"
multi_line_output = 3
# Inherited from black
line_length = 88
combine_as_imports = true

[tool.poetry.dependencies]
python = "^2.7 || ^3.6 || ^3.7 || ^3.8 || ^3.9"
numpy = [
    {version = "^1.16.6", markers = "python_version ~= '2.7'"},
    {version = "^1.18.5", markers = "python_version ~= '3.5.2'"},
    {version = "^1.19.5", markers = "python_version ~= '3.6'"},
    {version = "^1.20.3", markers = "python_version ~= '3.7'"},
    {version = "^1.20.3", markers = "python_version ~= '3.8'"},
    {version = "^1.20.3", markers = "python_version ~= '3.9'"},
]
scipy = [
    {version = "^1.2", markers = "python_version ~= '2.7'"},
    {version = "^1.4", markers = "python_version ~= '3.5.2'"},
    {version = "^1.5", markers = "python_version ~= '3.6'"},
    {version = "^1.6", markers = "python_version ~= '3.7'"},
    {version = "^1.6", markers = "python_version ~= '3.8'"},
    {version = "^1.6", markers = "python_version ~= '3.9'"},
]
fdint = "^2.0"

[tool.poetry.dev-dependencies]
# Used only for example plots
matplotlib = [
    {version = "^2.2", markers = "python_version ~= '2.7'"},
    {version = "^3.0", markers = "python_version ~= '3.5.2'"},
    {version = "^3.3", markers = "python_version ~= '3.6'"},
    {version = "^3.4", markers = "python_version ~= '3.7'"},
    {version = "^3.4", markers = "python_version ~= '3.8'"},
    {version = "^3.4", markers = "python_version ~= '3.9'"},
]
pytest = [
    {version = "^4.6.11", markers = "python_version ~= '2.7'"},
    {version = "^6.1.2", markers = "python_version ~= '3.5.2'"},
    {version = "^6.2.4", markers = "python_version ~= '3.6'"},
    {version = "^6.2.4", markers = "python_version ~= '3.7'"},
    {version = "^6.2.4", markers = "python_version ~= '3.8'"},
    {version = "^6.2.4", markers = "python_version ~= '3.9'"},
    # pytest 5.0 dropped support for python < 3.5
#    {version = "^4", python = "<3.5"},
#    {version = ">=5.2", python = ">=3.5"}
]
flake8 = "<=3.9.2"
hypothesis = [
    {version = "^4.6.1", markers = "python_version ~= '2.7'"},
    {version = "^5.33.2", markers = "python_version ~= '3.5.2'"},
    {version = "^6.14.3", markers = "python_version ~= '3.6'"},
    {version = "^6.14.3", markers = "python_version ~= '3.7'"},
    {version = "^6.14.3", markers = "python_version ~= '3.8'"},
    {version = "^6.14.3", markers = "python_version ~= '3.9'"},
    # hypothesis 5.0 dropped support for python 2.7
#    {version = "<5", python = "<3.5.2"},
#    {version = ">=5, <6.15", python = ">=3.5.2"}
]
black = {extras = ["python2"], version = "^21.7b0", python = ">=3.8"}
isort = {version = "^5.9.2", python = ">=3.8"}
docformatter = {version = "^1.4", python = ">=3.8"}
typed-ast = {version = "^1.4.3", python = "^2.7"}
pytest-cov = "^2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "ifg/metadata.py:__version__"
]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "pip install poetry==1.1.7 && poetry build"
