[tool.poetry]
name = "ifg"
version = "2.1.1"
description = "Calculator of Ideal Fermi gas properties"
license = "MIT"
authors = [
    "Aleksei Kozharin <1alekseik1@gmail.com>",
    "Pavel Levashov <pasha@jiht.ru>"
]
maintainers = ["Aleksei Kozharin <1alekseik1@gmail.com>"]
readme = "README.md"
repository = "https://github.com/alekseik1/ifg-py"
documentation = "https://ifg-py.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
numpy = [
    {version = ">=1.8.2,<=1.16", python = ">=2.7, <3.5"},
    {version = ">=1.13.3,<=1.17.3", python = "~3.5"},
    {version = ">=1.14.5,<=1.19.3", python = "~3.6"},
    {version = ">=1.16.5,<=1.20", python = "~3.7"},
    {version = ">=1.17.3,<1.24.0", python = "~3.8"},
    {version = ">=1.22.4,<2.0.0", python = "^3.9"},
]
scipy = [
    {version = "~1.2", python = ">=2.7, <3.5"},
    {version = "~1.4", python = "~3.5"},
    {version = "~1.5", python = "~3.6"},
    {version = "~1.6", python = "~3.7"},
    {version = "~1.8", python = "~3.8"},
    {version = "~1.12", python = "^3.9"},
]
# fdint = "^2.0"
fdint = [
    {version = "^2.0", python = "<3.11"},
    {git = "https://github.com/alekseik1/fdint.git", python = ">=3.11"},
    # {path = "../fdint", python = ">=3.11"},
]

[tool.poetry.dev-dependencies]
# Used only for example plots
matplotlib = [
    {version = "^2.2", markers = "python_version ~= '2.7'"},
    {version = "^3.0", markers = "python_version ~= '3.5.2'"},
    {version = "^3.3", markers = "python_version ~= '3.6'"},
    {version = "^3.4", markers = "python_version ~= '3.7'"},
    {version = "^3.4", markers = "python_version ~= '3.8'"},
    {version = "^3.4", markers = "python_version ~= '3.9'"},
]
pytest = [
    {version = "^4.6.11", markers = "python_version ~= '2.7'"},
    {version = "^6.1.2", markers = "python_version ~= '3.5.2'"},
    {version = "^6.2.4", markers = "python_version ~= '3.6'"},
    {version = "^6.2.4", markers = "python_version ~= '3.7'"},
    {version = "^6.2.4", markers = "python_version ~= '3.8'"},
    {version = "^6.2.4", markers = "python_version ~= '3.9'"},
    # pytest 5.0 dropped support for python < 3.5
#    {version = "^4", python = "<3.5"},
#    {version = ">=5.2", python = ">=3.5"}
]
hypothesis = [
    {version = "^4.6.1", markers = "python_version ~= '2.7'"},
    {version = "^5.33.2", markers = "python_version ~= '3.5.2'"},
    {version = "^6.14.3", markers = "python_version ~= '3.6'"},
    {version = "^6.14.3", markers = "python_version ~= '3.7'"},
    {version = "^6.14.3", markers = "python_version ~= '3.8'"},
    {version = "^6.14.3", markers = "python_version ~= '3.9'"},
    # hypothesis 5.0 dropped support for python 2.7
#    {version = "<5", python = "<3.5.2"},
#    {version = ">=5, <6.15", python = ">=3.5.2"}
]
typed-ast = [
    {version = "^1.4.3", python = "<3.6"},
    {version = "^1.5.5", python = ">=3.6"},
]

[build-system]
requires = ["poetry-core>=1.0.0", "numpy", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "ifg/metadata.py:__version__"
]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "pip install poetry==1.1.7 && poetry build"
